# mindvault

./: .gitignore  ARCHITECT.md  BUILDER.md  CLAUDE.md  README.en.md  README.md  REVIEWER.md  pyproject.toml
handoff/: ARCHITECT-BRIEF.md  BUILD-LOG.md  REVIEW-FEEDBACK.md  REVIEW-REQUEST.md  SESSION-CHECKPOINT.md
skill/: SKILL.md
src/mindvault/: __init__.py  analyze.py  build.py  cache.py  cli.py  cluster.py  compile.py  config.py  detect.py  export.py  extract.py  global_.py  hooks.py  index.py  ingest.py  integrations.py  lint.py  llm.py  lore.py  migrate.py  pipeline.py  progress.py  query.py  report.py  rules.py  search.py  watch.py  wiki.py
tests/: test_canonical_id.py  test_hooks.py  test_integrations.py  test_lore.py  test_migration.py  test_obsidian_vault.py  test_progress.py  test_rules.py  test_search.py
